--- a/templates/backend-base.html
+++ b/templates/backend-base.html
@@ -163,7 +163,8 @@
 
 			<!-- <h2 style="width:100%; padding-left:10px; margin-bottom: 20px; font-weight: bold;">Kategori Pertanyaan</h2> -->
 			<!-- jika diklik, keluar kategori dari pertanyaan, produk, artikel, dll -->
-
+            {% block menupinggir %}{% endblock %}
+            <!--
 			<ul id="dashboard-menu" class="nav nav-list">
 				<li class="active ">
 					<a rel="tooltip" data-placement="right" data-original-title="Dashboard" href="index.html">
@@ -186,6 +187,7 @@
                         <i class="icon-magic"></i> <span class="caption">Dan Lain-Lain</span></a>
 				</li>
 			</ul>
+			-->
 		</div>
 
 		<div class="content">
